Add nuget packages and link project

--- a/GameStore/Repository/Repository.csproj
+++ b/GameStore/Repository/Repository.csproj
@@ -10,4 +10,8 @@
     <Folder Include="IRepository\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
