--- a/GameStore/DataAccess/DataAccess.csproj
+++ b/GameStore/DataAccess/DataAccess.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Seeds\" />
+  </ItemGroup>
+
 </Project>
