--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.0",
