Modify interceptors, add GameImage table, implement Cloudinary

--- a/GameStore/Presentation/appsettings.json
+++ b/GameStore/Presentation/appsettings.json
@@ -14,5 +14,10 @@
     "Issuer": "https://localhost:7189/",
     "Audience": "https://localhost:7189/",
     "Subject": "AccessToken"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dywenepi7",
+    "ApiKey": "124574516398265",
+    "ApiSecret": "HYmm-1OCNAsifpLC5_hNP0Cd6Rs"
   }
 }
